--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "gulp-6to5": "^3.0.0",
     "gulp-plumber": "^0.6.6",
     "gulp-traceur": "^0.16.0",
-    "traceur": "^0.0.84"
+    "traceur": "^0.0.84",
+
+    "jquery": "^2.1.1",
+    "mocha": "^2.0.1",
+    "sinon": "^1.12.1",
+    "webpack-dev-server": "^1.6.5",
+    "webpack-traceur-loader": "^0.3.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:mocha-traceur js/test/*.js",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
