header css clean up
moved menu.css to _menu.scss
removed dedundant classic library
changes the settings sag icon to a more performant version
position the logo to the left and style header

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Mooching Beach
+title: Neon Lounge
 email: soundobj@yahoo.com
 description: > # this means to ignore newlines until "baseurl:"
   A collection of technology tidbits, and personal interests from David de Diego: 
