about page design
removed blur logo animation, minor config wording

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Neon Lounge
 email: soundobj@yahoo.com
 description: > # this means to ignore newlines until "baseurl:"
   A collection of technology tidbits, and personal interests from David de Diego: 
-  Front End Developer, Musician and passionate traveller.
+  front end developer, musician and passionate traveller.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://soundobj.github.io" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
