--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "gulp-plumber": "^0.6.6",
     "gulp-traceur": "^0.16.0",
     "traceur": "^0.0.84",
-
+    "gulp-autoprefixer": "^2.1.0",
+    "browserslist": "^0.3.1",
     "jquery": "^2.1.1",
     "mocha": "^2.0.1",
     "sinon": "^1.12.1",
     "webpack-dev-server": "^1.6.5",
     "webpack-traceur-loader": "^0.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-autoprefixer": "^2.1.0"
+  },
   "scripts": {
     "test": "mocha --compilers js:mocha-traceur js/test/*.js",
     "start": "webpack-dev-server"
