jshint gulp setup and Neon.js documentation

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "webpack-traceur-loader": "^0.3.0"
   },
   "devDependencies": {
-    "gulp-autoprefixer": "^2.1.0"
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-jshint": "^1.9.4"
   },
   "scripts": {
     "test": "mocha --compilers js:mocha-traceur js/test/*.js",
